--- a/home.html
+++ b/home.html
@@ -2,6 +2,16 @@
 <html lang="en">
 
 <head>
+    <!-- Global site tag (gtag.js) - Google Analytics -->
+<script async src="https://www.googletagmanager.com/gtag/js?id=UA-131501251-1"></script>
+<script>
+  window.dataLayer = window.dataLayer || [];
+  function gtag(){dataLayer.push(arguments);}
+  gtag('js', new Date());
+
+  gtag('config', 'UA-131501251-1');
+</script>
+
     <meta charset="UTF-8">
     <meta name="description" content="CPI/SPI Calculator created for IITK student community by AKSHAY RATHI"/>
     <meta name="keywords" content="CPI IITK,SPI IITK,cpi,spi,cpi iitk,spi iitk,calculate cpi iitk,calculate spi iitk, akshay rathi iitk, Akshay Rathi,IITK AKSHAY RATHI"/>
@@ -11551,6 +11561,10 @@
         <div>
             <p class="h4 text-white py-2">Copyright @ 2018</p>
         </div>
+        <div align=center>
+            <a href='https://www.counter12.com'><img src='https://www.counter12.com/img-DwCcCCyyw9bc1d4c-26.gif' border='0' alt='free counter'></a>
+            <script type='text/javascript' src='https://www.counter12.com/ad.js?id=DwCcCCyyw9bc1d4c'></script>
+        </div>
 
         <!-- Modal -->
         <div class="modal fade" id="exampleModalCenter" tabindex="-1" role="dialog" aria-labelledby="exampleModalCenterTitle"
@@ -11568,6 +11582,7 @@
                     <div class="modal-body">
                         <p>Suggestion and Correction are Welcomed (akshayra@iitk.ac.in)</p>
                         <p>Designed using HTML5 and Bootstrap, Developed using Plain Javascript.</p>
+                        <p>Other Project- <span><a href="https://taxi-sharing-platform.herokuapp.com/" target="blank">Taxi-Sharing-Platform</a></span></p>
                     </div>
                     <div class="modal-footer">
                         <button type="button" class="btn btn-secondary" data-dismiss="modal">Close</button>
