--- a/index.html
+++ b/index.html
@@ -11559,10 +11559,10 @@
         <div>
             <p class="h4 text-white py-2">Copyright @ 2018</p>
         </div>
-        <!-- <div align=center>
+        <div align=center>
             <a href='https://www.counter12.com'><img src='https://www.counter12.com/img-DwCcCCyyw9bc1d4c-26.gif' border='0' alt='free counter'></a>
             <script type='text/javascript' src='https://www.counter12.com/ad.js?id=DwCcCCyyw9bc1d4c'></script>
-        </div> -->
+        </div>
 
         <!-- Modal -->
         <div class="modal fade" id="exampleModalCenter" tabindex="-1" role="dialog" aria-labelledby="exampleModalCenterTitle"
