--- a/index.html
+++ b/index.html
@@ -11579,7 +11579,7 @@
                     </div>
                     <div class="modal-body">
                         <p>Suggestion and Correction are Welcomed (akshayra@iitk.ac.in)</p>
-                        <p>Designed using HTML5 and Bootstrap, Developed using Plain Javascript.</p>
+                        <p>Designed and Developed using HTML5, Bootstrap and Javascript.</p>
                         <p>Other Project- <span><a href="https://taxi-sharing-platform.herokuapp.com/" target="blank">Taxi-Sharing-Platform</a></span></p>
                     </div>
                     <div class="modal-footer">
