api integation added

--- a/index.html
+++ b/index.html
@@ -11559,9 +11559,15 @@
         <div>
             <p class="h4 text-white py-2">Copyright @ 2018</p>
         </div>
-        <div align=center>
-            <a href='https://www.counter12.com'><img src='https://www.counter12.com/img-DwCcCCyyw9bc1d4c-26.gif' border='0' alt='free counter'></a>
-            <script type='text/javascript' src='https://www.counter12.com/ad.js?id=DwCcCCyyw9bc1d4c'></script>
+        <div style="width: 100%;">
+            <div style="display: flex; justify-content: center; font-size: 25px; color: white;" id="counter">
+                <div style="margin: 0px 2px">0</div>
+                <div style="margin: 0px 2px">0</div>
+                <div style="margin: 0px 2px">0</div>
+                <div style="margin: 0px 2px">0</div>
+                <div style="margin: 0px 2px">0</div>
+                <div style="margin: 0px 2px">0</div>
+            </div>
         </div>
 
         <!-- Modal -->
@@ -11578,7 +11584,7 @@
                         </button>
                     </div>
                     <div class="modal-body">
-                        <p>Suggestion and Correction are Welcomed (akshayra@iitk.ac.in)</p>
+                        <p>Suggestion and Correction are Welcomed (<span><a href="https://github.com/akshayrathigithub/CPI-SPI-Calculator" target="blank">Github</a></span>)</p>
                         <p>Designed and Developed using HTML5, Bootstrap and Javascript.</p>
                         <p>Other Project- <span><a href="https://taxi-sharing-platform.herokuapp.com/" target="blank">Taxi-Sharing-Platform</a></span></p>
                     </div>
@@ -11593,9 +11599,6 @@
     <script src="./Assets/popper.min.js" ></script>
     <script src="./Assets/bootstrap.min.js" ></script>
     <script src="app.js"></script>
-
-    <!-- Go to www.addthis.com/dashboard to customize your tools -->
-<script type="text/javascript" src="//s7.addthis.com/js/300/addthis_widget.js#pubid=ra-5c31cabf8cd24eaf"></script>
 
 
 </body>
