heroku server migration changes

--- a/index.html
+++ b/index.html
@@ -11586,7 +11586,7 @@
                     <div class="modal-body">
                         <p>Suggestion and Correction are Welcomed (<span><a href="https://github.com/akshayrathigithub/CPI-SPI-Calculator" target="blank">Github</a></span>)</p>
                         <p>Designed and Developed using HTML5, Bootstrap and Javascript.</p>
-                        <p>Other Project- <span><a href="https://taxi-sharing-platform.herokuapp.com/" target="blank">Taxi-Sharing-Platform</a></span></p>
+                        <p>Other Project- <span><a href="https://projects.akshayrathi.com/taxi-sharing-platform/" target="blank">Taxi-Sharing-Platform</a></span></p>
                     </div>
                     <div class="modal-footer">
                         <button type="button" class="btn btn-secondary" data-dismiss="modal">Close</button>
