MTH courses name updated

--- a/index.html
+++ b/index.html
@@ -11209,14 +11209,14 @@
                             </thead>
                             <tbody class="text-uppercase">
                                 <tr>
-                                    <td>Mth.Sci.Comp-1</td>
+                                    <td>Mth308b</td>
                                     <td>10</td>
                                     <td><span>
                                             <div class="dropdown">
                                                 <a class="btn btn-success dropdown-toggle" href="#" role="button"
-                                                    id="Grade_SixthSem_MTH_Mth.Sci" data-toggle="dropdown"
+                                                    id="Grade_SixthSem_MTH_Mth308" data-toggle="dropdown"
                                                     aria-haspopup="true" aria-expanded="false"></a>
-                                                <div class="dropdown-menu" aria-labelledby="Grade_SixthSem_MTH_Mth.Sci">
+                                                <div class="dropdown-menu" aria-labelledby="Grade_SixthSem_MTH_Mth308">
                                                     <a class="dropdown-item" href="#">A/A*</a>
                                                     <a class="dropdown-item" href="#">B+</a>
                                                     <a class="dropdown-item" href="#">B</a>
@@ -11450,15 +11450,15 @@
                                         </span></td>
                                 </tr>
                                 <tr>
-                                    <td>Mth.Sci.Comp-2</td>
+                                    <td>Mth430a</td>
                                     <td>10</td>
                                     <td><span>
                                             <div class="dropdown">
                                                 <a class="btn btn-success dropdown-toggle" href="#" role="button"
-                                                    id="Grade_SeventhSem_MTH_MTH.SCI" data-toggle="dropdown"
+                                                    id="Grade_SeventhSem_MTH_Mth430" data-toggle="dropdown"
                                                     aria-haspopup="true" aria-expanded="false"></a>
                                                 <div class="dropdown-menu"
-                                                    aria-labelledby="Grade_SeventhSem_MTH_MTH.SCI">
+                                                    aria-labelledby="Grade_SeventhSem_MTH_Mth430">
                                                     <a class="dropdown-item" href="#">A/A*</a>
                                                     <a class="dropdown-item" href="#">B+</a>
                                                     <a class="dropdown-item" href="#">B</a>
