exclude dropped courses from grade calculation

--- a/Calculator/index.html
+++ b/Calculator/index.html
@@ -427,5 +427,7 @@
     <script src="./Assets/popper.min.js"></script>
     <script src="./Assets/bootstrap.min.js"></script>
     <script src="./app.js" type="module"></script>
+    <!-- Reload dependency -->
+    <script src="/reload/reload.js"></script>
   </body>
 </html>
